# My_Own_Shell

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.kali  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LICENSE  Makefile  Makefile.win  PLAN.md  README.md  build.bat  build.sh  build_msvc.bat  build_windows.bat  docker-compose.yml  gupt.bat  kalishell.bat  setup.ps1  setup_windows.bat
.github/workflows/: build.yml
config/: gupt.yaml  kalishell.yaml
include/gupt/: dsl.h  errors.h  gupt.h  knowledge.h  platform.h  portable.h  session.h  tool_adapter.h  types.h
installer/: kalishell.nsi
scripts/: api-audit.lua  recon.lua
src/adapters/: httpx.c  registry.c  subfinder.c  tools.c
src/ai/: ai.c  analyzer.c  ollama.c
src/core/: config.c  log.c  main.c  shell.c
src/findings/: cvss.c  finding.c  template.c
src/graph/: graph.c  visualization.c
src/knowledge/: knowledge.c
src/parser/: parser.c
src/plugins/: api.c  loader.c  plugin.c
src/reports/: export.c  markdown.c  report.c
src/scripting/: dsl.c  gupt_dsl.c  lua_engine.c
src/session/: session.c
src/tools/: orchestrator.c  pipeline.c  tool.c
src/tui/: dashboard.c  progress.c  themes.c  tui.c
src/utils/: file_utils.c  platform.c  platform_win.c  string_utils.c
src/workspace/: database.c  workspace.c
tools/definitions/: httpx.yaml  katana.yaml  nuclei.yaml  subfinder.yaml
